Made some forms.

--- a/html/06_list_tables.html
+++ b/html/06_list_tables.html
@@ -37,6 +37,34 @@
         <li>Item 3</li>
         <li>Item 4</li>
     </ul>
+
+    <!--Tables-->
+    <table>
+        <thead>
+            <tr>
+                <th>first name</th>
+                <th>last name</th>
+                <th>email</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>John</td>
+                <td>Doe</td>
+                <td>jdoe@xmail.com</td>
+            </tr>
+            <tr>
+                <td>Hulk</td>
+                <td>Hogan</td>
+                <td>crybaby22@wwe.com</td>
+            </tr>
+            <tr>
+                <td>Johnny</td>
+                <td>Smashface</td>
+                <td>ugly_john@hotmail.com</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 
 </html>
