My first stylish form!

--- a/css/form-challenge.html
+++ b/css/form-challenge.html
@@ -5,95 +5,124 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap" rel="stylesheet">
     <style>
         * {
             /* -Maybe add "border-box" for "box-sizing"
             so padding down not affect width */
-
+            box-sizing: border-box;
             /* Reset Margin and Padding */
+            margin: 0;
+            padding: 0;
         }
 
         body {
             /* background color is #344a72 */
+            background-color: #344a72;
+            font-family: 'Mulish', sans-serif;
         }
 
         a {
             /* Underlined links are ugly... */
+            text-decoration: none;
         }
 
         #container {
             /* -Remember, margin: auto on left and right will center a block element */
-
+            margin: 30px auto;
             /* Set a "max-width" for responsiveness */
-
+            max-width: 500px;
             /* Maybe add some padding */
+            padding: 20px;
         }
 
         .form-wrap {
             /* This is the white area around the form and heading, etc. */
+            background-color: #f4f4f4;
+            padding: 20px;
+            border-radius: 10px;
         }
 
         .form-wrap h1,
         .form-wrap p {
             /* Maybe center these... */
+            margin: 15px auto;
         }
 
         .form-wrap .form-group label {
             /* label should be turned into a block element */
+            display: block;
         }
 
         .form-wrap .form-group input {
-            /* Should reach across the .from-wrap 100% and have some padding */
+            /* Should reach across the .form-wrap 100% and have some padding */
+            width: 100%;
+            padding: 5px;
         }
 
         .form-wrap button {
             /* Button should wrap across 100% and display as block */
-
+            width: 100%;
+            display: block;
             /* Background color for button is #49c1a2 */
+            background-color: #49c1a2;
+            margin: 10px 0;
+            padding: 5px;
+            color: #f4f4f4;
         }
 
         .form-wrap button:hover {
             /* Hover background color for button is #37a08e */
+            background-color: #37a08e;
         }
 
         .form-wrap .bottom-text {
             /* Bottom text is smaller */
+            font-size: 8px;
         }
 
         footer {
             /* Should be centered */
+            max-width: 500px;
+            margin: auto;
+            color: #f4f4f4;
         }
 
         footer a {
             /* footer link color is #49c1a2 */
+            color: #49c1a2;
+        }
+
+        footer a:hover {
+            color: coral;
         }
     </style>
 </head>
 
 <body>
-    <div class="container">
+    <div id="container">
         <div class="form-wrap">
             <h1>Sign Up</h1>
             <p>It's free and only takes your soul</p>
             <form>
                 <div class="form-group">
-                    <label for="first-name">First Name</label>
+                    <label for="first-name">First Name:</label>
                     <input type="text" name="firstName" id="first-name">
                 </div>
                 <div class="form-group">
-                    <label for="last-name">Last Name</label>
+                    <label for="last-name">Last Name:</label>
                     <input type="text" name="lastName" id="last-name">
                 </div>
                 <div class="form-group">
-                    <label for="email">Email</label>
+                    <label for="email">Email:</label>
                     <input type="email" name="email" id="email">
                 </div>
                 <div class="form-group">
-                    <label for="password">Password</label>
+                    <label for="password">Password:</label>
                     <input type="password" name="password" id="password">
                 </div>
                 <div class="form-group">
-                    <label for="password2">Confirm Password</label>
+                    <label for="password2">Confirm Password:</label>
                     <input type="password" name="password2" id="password2">
                 </div>
                 <button type="submit" class="btn">Sign Up</button>
