--- a/css/form-challenge.html
+++ b/css/form-challenge.html
@@ -20,6 +20,7 @@
             /* background color is #344a72 */
             background-color: #344a72;
             font-family: 'Mulish', sans-serif;
+            line-height: 1.8em;
         }
 
         a {
@@ -38,7 +39,7 @@
 
         .form-wrap {
             /* This is the white area around the form and heading, etc. */
-            background-color: #f4f4f4;
+            background-color: #fff;
             padding: 20px;
             border-radius: 10px;
         }
@@ -49,15 +50,22 @@
             margin: 15px auto;
         }
 
+        .form-wrap p {
+            font-style: italic;
+        }
+
         .form-wrap .form-group label {
             /* label should be turned into a block element */
             display: block;
+            color: #666;
         }
 
         .form-wrap .form-group input {
             /* Should reach across the .form-wrap 100% and have some padding */
             width: 100%;
-            padding: 5px;
+            padding: 10px;
+            border: #ddd 1px solid;
+            border-radius: 5px;
         }
 
         .form-wrap button {
@@ -69,6 +77,7 @@
             margin: 10px 0;
             padding: 5px;
             color: #f4f4f4;
+            cursor: pointer;
         }
 
         .form-wrap button:hover {
@@ -78,7 +87,7 @@
 
         .form-wrap .bottom-text {
             /* Bottom text is smaller */
-            font-size: 8px;
+            font-size: 10px;
         }
 
         footer {
@@ -86,6 +95,7 @@
             max-width: 500px;
             margin: auto;
             color: #f4f4f4;
+            text-align: center;
         }
 
         footer a {
@@ -103,7 +113,7 @@
     <div id="container">
         <div class="form-wrap">
             <h1>Sign Up</h1>
-            <p>It's free and only takes your soul</p>
+            <p>It's free and only takes your soul!</p>
             <form>
                 <div class="form-group">
                     <label for="first-name">First Name:</label>
