--- a/hotel/index.html
+++ b/hotel/index.html
@@ -22,6 +22,17 @@
                 </ul>
             </div>
         </nav>
+        <div id="showcase">
+            <div class="container">
+                <div class="showcase-content">
+                    <h2>Enjoy Your Stay</h2>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Dolor repellat ea magni modi ipsam, recusandae dignissimos harum dolorem? Voluptatem, delectus.
+                    </p>
+                    <a class="btn" href="about.html"><span class="text-primary">About</span> our hotel</a>
+                </div>
+            </div>
+        </div>
     </header>
 </body>
 
