home info section

--- a/hotel/index.html
+++ b/hotel/index.html
@@ -29,11 +29,24 @@
                     <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Dolor repellat ea magni modi ipsam, recusandae dignissimos harum dolorem? Voluptatem, delectus.
                     </p>
-                    <a class="btn" href="about.html"><span class="text-primary">About</span> our hotel</a>
+                    <a class="btn" href="about.html">About our hotel</a>
                 </div>
             </div>
         </div>
     </header>
+
+    <section id="home-info" class="bg-dark">
+        <div class="info-img"></div>
+        <div class="info-content">
+            <h3><span class="text-primary">The History</span> of our Hotel</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Amet exercitationem qui, perferendis, at alias ipsa laudantium quam quisquam quaerat
+                quasi veniam ducimus fugit nobis impedit dicta saepe, unde consectetur.
+                Libero ad soluta labore aspernatur quas itaque a consequuntur eius in,
+                neque temporibus dolorum iure quidem nam alias aut ea dolor.</p>
+            <a href="about.html" class="btn btn-light">Read More</a>
+        </div>
+    </section>
 </body>
 
 </html>
