--- a/hotel/index.html
+++ b/hotel/index.html
@@ -26,8 +26,8 @@
             <div class="container">
                 <div class="showcase-content">
                     <h2>Enjoy Your Stay</h2>
-                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Dolor repellat ea magni modi ipsam, recusandae dignissimos harum dolorem? Voluptatem, delectus.
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, consequuntur?
+                        Molestiae facere ab vel totam!
                     </p>
                     <a class="btn" href="about.html">About our hotel</a>
                 </div>
