--- a/hotel/index.html
+++ b/hotel/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to the hippest hotel in Minneapolis.">
     <meta name="keywords" content="hotel, Minneapolis hotel, midwest hotel">
+    <script src="https://kit.fontawesome.com/0dbedd0523.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>RK Hotel | Welcome</title>
+    <title>Hotel Khruang Royale</title>
 </head>
 
 <body>
     <header>
         <nav id="navbar">
             <div class="container">
-                <h1 class="logo"><a href="index.html">RKH</a></h1>
+                <h1 class="logo"><a href="index.html">HKR</a></h1>
                 <ul>
                     <li><a class="current" href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
@@ -38,7 +39,7 @@
     <section id="home-info" class="bg-dark">
         <div class="info-img"></div>
         <div class="info-content">
-            <h3><span class="text-primary">The History</span> of our Hotel</h3>
+            <h3>The History of <span class="text-primary">Hotel Khruang Royale</span></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Amet exercitationem qui, perferendis, at alias ipsa laudantium quam quisquam quaerat
                 quasi veniam ducimus fugit nobis impedit dicta saepe, unde consectetur.
@@ -47,6 +48,30 @@
             <a href="about.html" class="btn btn-light">Read More</a>
         </div>
     </section>
+
+    <section id="features">
+        <div class="box bg-light">
+            <i class="fas fa-hotel fa-3x"></i>
+            <h4>Great Location</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos, rem.</p>
+        </div>
+        <div class="box bg-primary">
+            <i class="fas fa-utensils fa-3x"></i>
+            <h4>Continental Breakfast</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, cumque?</p>
+        </div>
+        <div class="box bg-light">
+            <i class="fas fa-dumbbell fa-3x"></i>
+            <h4>Fitness Room</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, voluptas.</p>
+        </div>
+    </section>
+
+    <div class="clr"></div>
+
+    <footer id="main-footer">
+        <p>HKR &copy; 2020, All Rights Hard-Earned</p>
+    </footer>
 </body>
 
 </html>
