--- a/css/13_media-queries.html
+++ b/css/13_media-queries.html
@@ -8,7 +8,17 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
-            background: gray;
+            background: green;
+            color: white;
+            text-align: center;
+            padding-top: 100px;
+        }
+
+        /* smahtphones */
+        @media(max-width: 500px) {
+            body {
+                background: red;
+            }
         }
     </style>
 </head>
@@ -27,7 +37,7 @@
         <h1>Smartphone</h1>
     </div>
     <div id="landscape">
-        <h1>landscape</h1>
+        <h1>Landscape</h1>
     </div>
 </body>
 
