--- a/css/13_media-queries.html
+++ b/css/13_media-queries.html
@@ -14,10 +14,62 @@
             padding-top: 100px;
         }
 
+        h1 {
+            display: none;
+        }
+
         /* smahtphones */
         @media(max-width: 500px) {
             body {
                 background: red;
+            }
+
+            #smartphone h1 {
+                display: block;
+            }
+        }
+
+        /* tablet */
+        @media(min-width: 501px) and (max-width: 768px) {
+            body {
+                background: blue;
+            }
+
+            #tablet h1 {
+                display: block;
+            }
+        }
+
+        /* normal */
+        @media(min-width: 769px) and (max-width: 1200px) {
+            body {
+                background: purple;
+            }
+
+            #normal h1 {
+                display: block;
+            }
+        }
+
+        /* widescreen */
+        @media(min-width: 1201px) {
+            body {
+                background: black;
+            }
+
+            #widescreen h1 {
+                display: block;
+            }
+        }
+
+        /* landscape */
+        @media(max-height: 500px) {
+            body {
+                background: orange;
+            }
+
+            #landscape h1 {
+                display: block;
             }
         }
     </style>
