Exiting float hell

--- a/hotel/about.html
+++ b/hotel/about.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Welcome to the hippest hotel in Minneapolis.">
     <meta name="keywords" content="hotel, Minneapolis hotel, midwest hotel">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="mobile.css">
     <title>HKR | About</title>
 </head>
 
