--- a/hotel/contact.html
+++ b/hotel/contact.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="hotel, Minneapolis hotel, midwest hotel">
     <script src="https://kit.fontawesome.com/0dbedd0523.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="mobile.css">
     <title>HKR | Contact</title>
 </head>
 
@@ -56,7 +57,7 @@
                 <p>3800 Chicago Avenue South, Minneapolis MN</p>
             </div>
             <div class="box">
-                <i class="fas fa-utensils fa-3x"></i>
+                <i class="fas fa-phone fa-3x"></i>
                 <h3>Phone Number</h3>
                 <p>(612) 987-6543</p>
             </div>
