--- a/hotel/index.html
+++ b/hotel/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="hotel, Minneapolis hotel, midwest hotel">
     <script src="https://kit.fontawesome.com/0dbedd0523.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="mobile.css">
     <title>Hotel Khruang Royale</title>
 </head>
 
@@ -40,11 +41,9 @@
         <div class="info-img"></div>
         <div class="info-content">
             <h3>The History of <span class="text-primary">Hotel Khruang Royale</span></h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Amet exercitationem qui, perferendis, at alias ipsa laudantium quam quisquam quaerat
-                quasi veniam ducimus fugit nobis impedit dicta saepe, unde consectetur.
-                Libero ad soluta labore aspernatur quas itaque a consequuntur eius in,
-                neque temporibus dolorum iure quidem nam alias aut ea dolor.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt perferendis reiciendis quasi
+                dignissimos officia? Natus alias dolorem voluptas nostrum eius molestias,
+                cumque est id officiis ab ipsam laudantium quisquam molestiae?</p>
             <a href="about.html" class="btn btn-light">Read More</a>
         </div>
     </section>
