--- a/ledger/index.html
+++ b/ledger/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="hero">
-        <div id="navbar">
+        <div class="navbar">
             <h1 class="logo">
                 <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger
             </h1>
