--- a/ledger/index.html
+++ b/ledger/index.html
@@ -32,7 +32,7 @@
         <div class="content">
             <h2>The Sky Is The Limit</h2>
             <p>We provide world-class financial assistance.</p>
-            <a href="#about" class="btn"><i class=""></i></a>
+            <a href="#about" class="btn btn-primary"><i class="fas fa-chevron-right"></i> Read More</a>
         </div>
     </header>
 </body>
