--- a/ledger/index.html
+++ b/ledger/index.html
@@ -35,6 +35,66 @@
             <a href="#about" class="btn btn-primary"><i class="fas fa-chevron-right"></i> Read More</a>
         </div>
     </header>
+
+    <main>
+        <!-- About: Icons -->
+        <section id="about" class="icons bg-light">
+            <div class="flex-items">
+                <div>
+                    <i class="fas fa-university fa-2x"></i>
+                    <div>
+                        <h3>Investment Banking</h3>
+                        <p>Bring to the table win-win survival strategies to ensure proactive domination.
+                            Going forward, a new normal that has evolved from generation X is on
+                            the runway heading towards a streamlined cloud solution.</p>
+                    </div>
+                </div>
+                <div>
+                    <i class="fas fa-book-reader fa-2x"></i>
+                    <div>
+                        <h3>Portfolio Management</h3>
+                        <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.
+                            Iterative approaches to corporate strategy foster collaborative thinking to further the
+                            overall value proposition.</p>
+                    </div>
+                </div>
+                <div>
+                    <i class="fas fa-pencil-alt fa-2x"></i>
+                    <div>
+                        <h3>Tax & Custodial</h3>
+                        <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test.
+                            Override the digital divide with additional clickthroughs from DevOps.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- About : Solutions -->
+        <section class="solutions flex-columns">
+            <div class="row">
+                <div class="column">
+                    <div class="column-1">
+                        <img src="./image_resources/home/people.jpg" alt="Some empty suits">
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="column-2 bg-primary">
+                        <h4>What you are looking for</h4>
+                        <h2>We provide bespoke solutions</h2>
+                        <p>Podcasting operational change management inside of workflows to establish a framework.
+                            Taking seamless key performance indicators offline to maximise the long tail. Keeping your
+                            eye on the ball while performing a deep dive on the start-up mentality to derive convergence
+                            on
+                            cross-platform integration.</p>
+                        <a href="#" class="btn btn-outline">
+                            <i class="fas fa-chevron"></i>
+                            Read More
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
