Added a blog section

--- a/ledger/index.html
+++ b/ledger/index.html
@@ -94,6 +94,81 @@
                 </div>
             </div>
         </section>
+
+        <section id="cases" class="cases flex-grid section-padding">
+            <header class="section-header">
+                <h4>This is what we do...</h4>
+                <h2>Business Cases</h2>
+                <p>Collaboratively administrate empowered markets via plug-and-play networks.</p>
+            </header>
+            <div class="row">
+                <div class="column">
+                    <img src="./image_resources/cases/cases1.jpg"
+                        alt="A man and a woman shake hands across a table at a meeting. There are six people with laptops on top of the table.">
+                    <img src="./image_resources/cases/cases2.jpg"
+                        alt="Close up of a single index finger stroking a keyboard on a laptop.">
+                </div>
+                <div class="column">
+                    <img src="./image_resources/cases/cases3.jpg"
+                        alt="A close up of a sheet filled with pie and line charts. A pair of hands frames the sheet; one hand types on a keyboard and the other hand writes notes in a notebook with a pen.">
+                    <img src="./image_resources/cases/cases4.jpg"
+                        alt="A stock photo of skyscrapers from the point of looking upward from the street. .">
+                </div>
+                <div class="column">
+                    <img src="./image_resources/cases/cases5.jpg" alt="A Two people shake hands over a cup of coffee.">
+                    <img src="./image_resources/cases/cases6.jpg"
+                        alt="A woman in the foreground stares at the camera and smiles with arms folded. In the background, a blurred group of people surround a laptop apparently at work.">
+                </div>
+                <div class="column">
+                    <img src="./image_resources/cases/cases7.jpg"
+                        alt="A close up of six hands reaching toward the center of a circle, apparently about to break from a huddle.">
+                    <img src="./image_resources/cases/cases8.jpg"
+                        alt="A woman and a man work side by side on their laptops; the woman is smiling while facing the man.">
+                </div>
+            </div>
+        </section>
+
+        <!-- About : Blog -->
+        <section id="blog" class="blog flex-columns flex-reverse">
+            <div class="row">
+                <div class="column">
+                    <div class="column-1">
+                        <img src="./image_resources/home/blog.jpg" alt="Some empty suits">
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="column-2 bg-dark">
+                        <h4>August 6th, 2020</h4>
+                        <h2>Reflections on Selling the Dream</h2>
+                        <p>Passion depths grandeur ultimate pinnacle moral pious. Superiority pious mountains gains good
+                            will christian moral snare. Deceptions moral superiority holiest enlightenment pinnacle
+                            madness endless convictions passion insofar god. Pious god marvelous dead faith insofar
+                            pious. Victorious oneself intentions will evil inexpedient decrepit mountains pinnacle evil
+                            insofar suicide.
+
+                            Ascetic war ubermensch gains against fearful victorious ubermensch pious eternal-return
+                            ideal law victorious snare. Strong hatred sea ultimate joy suicide revaluation reason free
+                            joy god moral ideal salvation. Noble abstract snare battle ocean enlightenment pinnacle
+                            horror prejudice aversion self madness.
+
+                            Sea ideal aversion aversion gains. Grandeur gains mountains depths passion. Intentions
+                            enlightenment god insofar oneself marvelous victorious mountains sexuality free virtues
+                            contradict. Holiest right prejudice passion prejudice selfish ubermensch reason oneself
+                            merciful society abstract society aversion.
+
+                            Insofar inexpedient disgust free deceptions dead prejudice overcome horror zarathustra.
+                            Against chaos selfish evil ultimate chaos snare insofar mountains transvaluation grandeur
+                            play.
+
+                            Contradict hatred ascetic pinnacle intentions.</p>
+                        <a href="#" class="btn btn-outline">
+                            <i class="fas fa-chevron"></i>
+                            Read More
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
