--- a/ledger/index.html
+++ b/ledger/index.html
@@ -169,7 +169,77 @@
                 </div>
             </div>
         </section>
+
+        <section id="team" class="team section-padding">
+            <header class="section-header">
+                <h4>This is who we are...</h4>
+                <h2>Our Team</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, repudiandae.</p>
+            </header>
+            <div class="flex-items">
+                <div>
+                    <img src="./image_resources/team/person1.jpg" alt="A young, slick man in a suit smiling impishly.">
+                    <h4>Horatio Dirigible</h4>
+                    <p>Chief Executive Officer</p>
+                </div>
+
+                <div>
+                    <img src="./image_resources/team/person2.jpg"
+                        alt="A young woman in a cardigan seated at a desk smiling candidly.">
+                    <h4>Connie Onnihahni</h4>
+                    <p>Chief Financial Officer</p>
+                </div>
+
+                <div>
+                    <img src="./image_resources/team/person3.jpg"
+                        alt="A rakish man smiles at something off camera, perhaps a funny joke.">
+                    <h4>Kyle Assgaarten</h4>
+                    <p>Office Fool</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- About : Contact -->
+        <section id="contact" class="contact flex-columns">
+            <div class="row">
+                <div class="column">
+                    <div class="column-1">
+                        <img src="./image_resources/home/contact.jpg" alt="Some empty suits">
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="column-2 bg-light">
+                        <h2>Get in Contact</h2>
+                        <form action="" class="callback-form">
+                            <div class="form-control">
+                                <label for="name">Name</label>
+                                <input type="text" name="name" id="name" placeholder="Enter name...">
+                            </div>
+                            <div class="form-control">
+                                <label for="email">Email</label>
+                                <input type="email" name="email" id="email" placeholder="Enter email address...">
+                            </div>
+                            <div class="form-control">
+                                <label for="phone">Phone</label>
+                                <input type="text" name="phone" id="phone" placeholder="Enter a phone number...">
+                            </div>
+                            <input type="submit" value="Send" id="Submit" class="btn">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <footer class="footer bg-dark">
+        <div class="social">
+            <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
+            <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+            <p>Copyright &copy; 2020 - EdgeLedger</p>
+        </div>
+    </footer>
 </body>
 
 </html>
