--- a/ledger/index.html
+++ b/ledger/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="hero">
+    <header id="home" class="hero">
         <div class="navbar">
             <h1 class="logo">
                 <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger
@@ -161,7 +161,7 @@
                             play.
 
                             Contradict hatred ascetic pinnacle intentions.</p>
-                        <a href="#" class="btn btn-outline">
+                        <a href="blog.html" class="btn btn-outline">
                             <i class="fas fa-chevron"></i>
                             Read More
                         </a>
