--- a/ledger/index.html
+++ b/ledger/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header id="home" class="hero">
-        <div class="navbar">
+        <div id="navbar" class="navbar top">
             <h1 class="logo">
                 <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger
             </h1>
@@ -240,6 +240,21 @@
             <p>Copyright &copy; 2020 - EdgeLedger</p>
         </div>
     </footer>
+    <script>
+        const navbar = document.querySelector('#navbar');
+        let scrolled = false;
+
+        window.onscroll = function () {
+            if (window.pageYOffset > 100) {
+                navbar.classList.remove('top');
+                if (!scrolled) {
+                    navbar.style.transform = 'translateY(-70px)';
+                }
+            } else {
+                navbar.classList.add('top');
+            }
+        }
+    </script>
 </body>
 
 </html>
