--- a/ledger/index.html
+++ b/ledger/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to EdgeLedger</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
         integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
         crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/lightbox.min.css">
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
+    <title>Welcome to EdgeLedger</title>
 </head>
 
 <body>
@@ -102,28 +104,56 @@
                 <p>Collaboratively administrate empowered markets via plug-and-play networks.</p>
             </header>
             <div class="row">
+
                 <div class="column">
-                    <img src="./image_resources/cases/cases1.jpg"
-                        alt="A man and a woman shake hands across a table at a meeting. There are six people with laptops on top of the table.">
-                    <img src="./image_resources/cases/cases2.jpg"
-                        alt="Close up of a single index finger stroking a keyboard on a laptop.">
+                    <a href="./image_resources/cases/cases1.jpg" data-lightbox="cases"
+                        data-title="A man and a woman shake hands across a table at a meeting. There are six people with laptops on top of the table.">
+                        <img src="./image_resources/cases/cases1.jpg"
+                            alt="A man and a woman shake hands across a table at a meeting. There are six people with laptops on top of the table.">
+                    </a>
+                    <a href="./image_resources/cases/cases2.jpg" data-lightbox="cases"
+                        data-title="A hand pensively makes a keystroke on a laptop in profile.">
+                        <img src="./image_resources/cases/cases2.jpg"
+                            alt="A hand pensively makes a keystroke on a laptop in profile.">
+                    </a>
                 </div>
+
                 <div class="column">
-                    <img src="./image_resources/cases/cases3.jpg"
-                        alt="A close up of a sheet filled with pie and line charts. A pair of hands frames the sheet; one hand types on a keyboard and the other hand writes notes in a notebook with a pen.">
-                    <img src="./image_resources/cases/cases4.jpg"
-                        alt="A stock photo of skyscrapers from the point of looking upward from the street. .">
+                    <a href="./image_resources/cases/cases3.jpg" data-lightbox="cases"
+                        data-title="Close up on hands busily taking notes and typing data.">
+                        <img src="./image_resources/cases/cases3.jpg"
+                            alt="Close up on hands busily taking notes and typing data.">
+                    </a>
+                    <a href="./image_resources/cases/cases4.jpg" data-lightbox="cases"
+                        data-title="A street view of some glass skyscrapers against a cloudy sky.">
+                        <img src="./image_resources/cases/cases4.jpg"
+                            alt="A street view of some glass skyscrapers against a cloudy sky..">
+                    </a>
                 </div>
+
                 <div class="column">
-                    <img src="./image_resources/cases/cases5.jpg" alt="A Two people shake hands over a cup of coffee.">
-                    <img src="./image_resources/cases/cases6.jpg"
-                        alt="A woman in the foreground stares at the camera and smiles with arms folded. In the background, a blurred group of people surround a laptop apparently at work.">
+                    <a href="./image_resources/cases/cases5.jpg" data-lightbox="cases"
+                        data-title="Two people shake hands across a table.">
+                        <img src="./image_resources/cases/cases5.jpg" alt="Two people shake hands across a table">
+                    </a>
+                    <a href="./image_resources/cases/cases6.jpg" data-lightbox="cases"
+                        data-title="A woman crosses her arms with apparent satisfaction while her team works behind her in the background.">
+                        <img src="./image_resources/cases/cases6.jpg"
+                            alt="A woman crosses her arms with apparent satisfaction while her team works behind her in the background.">
+                    </a>
                 </div>
+
                 <div class="column">
-                    <img src="./image_resources/cases/cases7.jpg"
-                        alt="A close up of six hands reaching toward the center of a circle, apparently about to break from a huddle.">
-                    <img src="./image_resources/cases/cases8.jpg"
-                        alt="A woman and a man work side by side on their laptops; the woman is smiling while facing the man.">
+                    <a href="./image_resources/cases/cases7.jpg" data-lightbox="cases"
+                        data-title="Six hands meet in the middle of a circle as though they will break a huddle.">
+                        <img src="./image_resources/cases/cases7.jpg"
+                            alt="Six hands meet in the middle of a circle as though they will break a huddle.">
+                    </a>
+                    <a href="./image_resources/cases/cases8.jpg" data-lightbox="cases"
+                        data-title="A woman smiles at a man working alsongside her on a laptop.">
+                        <img src="./image_resources/cases/cases8.jpg"
+                            alt="A woman smiles at a man working alongside her on a laptop.">
+                    </a>
                 </div>
             </div>
         </section>
@@ -240,6 +270,12 @@
             <p>Copyright &copy; 2020 - EdgeLedger</p>
         </div>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+    <script src="js/lightbox.min.js"></script>
+
     <script>
         const navbar = document.querySelector('#navbar');
         let scrolled = false;
@@ -250,10 +286,32 @@
                 if (!scrolled) {
                     navbar.style.transform = 'translateY(-70px)';
                 }
+                setTimeout(function () {
+                    navbar.style.transform = 'translateY(0)';
+                    scrolled = true;
+                }, 200)
             } else {
                 navbar.classList.add('top');
+                scrolled = false;
             }
-        }
+        };
+
+        //Smooth Scrolling
+        $('#navbar a, .btn').on('click', function (event) {
+            if (this.hash !== '') {
+                event.preventDefault();
+
+                const hash = this.hash;
+
+                $('html, body').animate(
+                    {
+                        scrollTop: $(hash).offset().top - 100,
+                    },
+                    800
+                );
+            }
+        });
+
     </script>
 </body>
 
