--- a/css/16_flex_basics.html
+++ b/css/16_flex_basics.html
@@ -35,17 +35,17 @@
             flex: 3;
         }
 
-        /* #item1 {
-            flex-shrink: 0;
-        }
+        #item1 {
+            flex-shrink: 3;
+        } 
 
         #item2 {
-            flex-grow: 1;
+            flex-grow: 3;
             flex-basis: 0;
         }
 
         #item3 {
-            flex-grow: 2;
+            flex-grow: 1;
             flex-basis: 0;
         } */
     </style>
