--- a/css/17_flex_alignment.html
+++ b/css/17_flex_alignment.html
@@ -17,14 +17,14 @@
         .flex-container {
             display: flex;
             background-color: #f4f4f4;
-            /* flex-direction: column-reverse; */
+            flex-direction: column;
             /* flex-wrap: wrap; */
-            flex-direction: row;
+            /*flex-direction: row;*/
             /* Cross-axis align */
             align-items: center;
             /* Main-axis align */
             justify-content: center;
-            height: 50vh;
+            height: 100vh;
         }
 
         .item {
